--- a/views/adminProductDetails.ejs
+++ b/views/adminProductDetails.ejs
@@ -149,6 +149,7 @@
                                         <div class="form-group">
                                            <button class="btn btn-primary btn-block" type="submit">Send</button>
                                         </div> 
+                                        </form>
                                     </div>
                                 </div>
                             </div>
