--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -36,7 +36,7 @@
     </li>
     <% } %>
     <hr class="sidebar-divider my-0">
-    <% if(isAuthenticated){ %>
+    <% if(isAuthenticated && user.isAdmin){ %>
     <!-- Nav Item - Dashboard -->
     <li class="nav-item active">
         <a class="nav-link" href="/dashboard">
@@ -49,7 +49,7 @@
 
     <!-- Heading -->
     <div class="sidebar-heading">
-        Profile
+        Orders
     </div>
 
     <!-- Nav Item - Pages Collapse Menu -->
@@ -75,20 +75,25 @@
         <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities"
             aria-expanded="true" aria-controls="collapseUtilities">
             <i class="fas fa-fw fa-wrench"></i>
-            <span>Settings</span>
+            <span>Orders</span>
         </a>
         <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities"
             data-parent="#accordionSidebar">
             <div class="bg-white py-2 collapse-inner rounded">
                 <h6 class="collapse-header">Profile:</h6>
+                <% if(isAuthenticated && user.isAdmin){ %>
                 <a class="collapse-item" href="/dashboard/mybids">Bids</a>
-                <a class="collapse-item" href="/dashboard/myOrders">Manage Orders</a>
+                <% } %>
+                
+                <!-- <a class="collapse-item" href="/dashboard/myOrders">Manage Orders</a> -->
+                <% if(isAuthenticated){ %>
                 <a class="collapse-item" href="/dashboard/orders">Orders</a>
+                <% } %>
             </div>
         </div>
     </li>
     <% } %>
-    <% if(isAuthenticated){ %>
+    <% if(isAuthenticated && user.isAdmin){ %>
     <!-- Divider -->
     <hr class="sidebar-divider">
 
@@ -112,9 +117,25 @@
             <i class="fas fa-fw fa-table"></i>
             <span>Products</span></a>
     </li>
-
+    <li class="nav-item">
+        <a class="nav-link" href="/dashboard/users">
+            <i class="fas fa-fw fa-user"></i>
+            <span>Users</span></a>
+    </li>
     <!-- Divider -->
     <hr class="sidebar-divider d-none d-md-block">
+    <% } %>
+
+    <% if(isAuthenticated) { %>
+        
+            <li class="nav-item">
+                <a class="nav-link" href="/logout">
+                    <i class="fas fa-fw fa-sign-out-alt"></i>
+                    <span>Log out</span></a>
+            </li>
+      
+
+        <hr class="sidebar-divider">
     <% } %>
     <!-- Sidebar Toggler (Sidebar) -->
     <div class="text-center d-none d-md-inline my-4">
