--- a/views/admin/adminProductDetails.ejs
+++ b/views/admin/adminProductDetails.ejs
@@ -1,12 +1,12 @@
-<%- include('partials/header.ejs') %>
-<%- include('partials/sidebar.ejs') %>
+<%- include('../partials/header.ejs') %>
+<%- include('../partials/sidebar.ejs') %>
         <!-- Content Wrapper -->
         <div id="content-wrapper" class="d-flex flex-column">
 
             <!-- Main Content -->
             <div id="content">
 
-                <%- include('partials/admin-navbar.ejs') %>
+                <%- include('../partials/admin-navbar.ejs') %>
 
                 <!-- Begin Page Content -->
                 <div class="container-fluid">
@@ -27,7 +27,7 @@
 
                         <!-- Content Column -->
                         <div class="col-lg-6 mb-4">
-                            <%- include('partials/productForm.ejs') %>
+                            <%- include('../partials/productForm.ejs') %>
                             <!-- Project Card Example -->
                             <div class="card shadow mb-4 d-flex justify-content-center">
                                 <div class="card-header py-3">
@@ -211,4 +211,4 @@
 
             </script>
 
-<%- include('partials/footer.ejs') %>
+<%- include('../partials/footer.ejs') %>
