--- a/views/admin/tables.ejs
+++ b/views/admin/tables.ejs
@@ -1,12 +1,12 @@
-<%- include('partials/header.ejs') %>
-<%- include('partials/sidebar.ejs') %>
+<%- include('../partials/header.ejs') %>
+<%- include('../partials/sidebar.ejs') %>
         <!-- Content Wrapper -->
         <div id="content-wrapper" class="d-flex flex-column">
 
             <!-- Main Content -->
             <div id="content">
 
-                <%- include('partials/admin-navbar.ejs') %>
+                <%- include('../partials/admin-navbar.ejs') %>
        
                 <!-- Begin Page Content -->
                 <div class="container-fluid">
@@ -149,4 +149,4 @@
             <script>
                 loadDoc()
             </script>
-            <%- include('partials/footer.ejs') %>
+            <%- include('../partials/footer.ejs') %>
