--- a/views/admin/charts.ejs
+++ b/views/admin/charts.ejs
@@ -1,12 +1,12 @@
-<%- include('partials/header.ejs') %>
-<%- include('partials/sidebar.ejs') %>
+<%- include('../partials/header.ejs') %>
+<%- include('../partials/sidebar.ejs') %>
         <!-- Content Wrapper -->
         <div id="content-wrapper" class="d-flex flex-column">
 
             <!-- Main Content -->
             <div id="content">
 
-                <%- include('partials/admin-navbar.ejs') %>
+                <%- include('../partials/admin-navbar.ejs') %>
                 <!-- Begin Page Content -->
                 <div class="container-fluid">
 
@@ -127,5 +127,5 @@
                 disableBtnSinceLastBid("<%= last_bid %>")
                 setChart(bidGlobal.labels,bidGlobal.data,bidGlobal.currency)
             </script>
-<%- include('partials/footer.ejs') %>
+<%- include('../partials/footer.ejs') %>
  
