--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -1,12 +1,12 @@
-<%- include('partials/header.ejs') %>
-<%- include('partials/sidebar.ejs') %>
+<%- include('../partials/header.ejs') %>
+<%- include('../partials/sidebar.ejs') %>
         <!-- Content Wrapper -->
         <div id="content-wrapper" class="d-flex flex-column">
 
             <!-- Main Content -->
             <div id="content">
 
-                <%- include('partials/admin-navbar.ejs') %>
+                <%- include('../partials/admin-navbar.ejs') %>
 
                 <!-- Begin Page Content -->
                 <div class="container-fluid">
@@ -341,4 +341,4 @@
 
             </div>
             <!-- End of Main Content -->
-<%- include('partials/footer.ejs') %>
+<%- include('../partials/footer.ejs') %>
