--- a/views/partials/admin-navbar.ejs
+++ b/views/partials/admin-navbar.ejs
@@ -116,9 +116,12 @@
             <!-- Dropdown - Messages -->
             <div class="dropdown-list dropdown-menu dropdown-menu-right shadow animated--grow-in"
                 aria-labelledby="messagesDropdown">
-                <h6 class="dropdown-header">
-                    Message Center
-                </h6>
+                <a href="/messages">
+                    <h6 class="dropdown-header">
+                        Message Center <i class="fas fa-envelope"></i>
+                    </h6>
+                </a>
+
                 <a class="dropdown-item d-flex align-items-center" href="#">
                     <div class="dropdown-list-image mr-3">
                         <img class="rounded-circle" src="img/undraw_profile_1.svg"
